--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/css/style.css"/>
+    <!-- cssへのアクセス -->
+    <link rel="stylesheet" href="/css/style.css"/> 
+    <!-- javascriptへのアクセス -->
     <script src="js/app.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
